2014-07-25  Dean Jackson  <dino@apple.com>

        Revert back to the Safari behavior from Mavericks and Mountain Lion
        on this branch.
        <rdar://problem/17800530>

        Reviewed by Ricky Mondello.

        * WebView/WebPreferences.mm:
        (+[WebPreferences initialize]): Set WebGL preference default to off.

2014-07-24  Lucas Forschler  <lforschler@apple.com>

        Merge r171575

    2014-07-24  Pratik Solanki  <psolanki@apple.com>

            [iOS] Remove prefs to tweak cache values
            https://bugs.webkit.org/show_bug.cgi?id=135274
            <rdar://problem/17784826>

            Reviewed by Alexey Proskuryakov.

            Remove iOS specific code that used to look up user defaults to see if any cache values were
            overridden. This was added for testing, is not used any more and is actually harmful now. It
            can cause unnecessary memory churn when under memory pressure since we call [WebView _setCacheModel]
            as a means to clear out memory cache.

            * WebView/WebPreferenceKeysPrivate.h:
            * WebView/WebPreferences.mm:
            (+[WebPreferences initialize]):
            (-[WebPreferences _setNSURLMemoryCacheSize:]): Deleted.
            (-[WebPreferences _NSURLMemoryCacheSize]): Deleted.
            (-[WebPreferences _setNSURLDiskCacheSize:]): Deleted.
            (-[WebPreferences _NSURLDiskCacheSize]): Deleted.
            * WebView/WebPreferencesPrivate.h:
            * WebView/WebView.mm:
            (+[WebView _setCacheModel:]):

2014-07-24  Lucas Forschler  <lforschler@apple.com>

        Merge r171540

    2014-07-24  Dan Bernstein  <mitz@apple.com>

            WebKit part of <rdar://problem/17766348> [Cocoa] WebCore::ProtectionSpace doesn’t preserve all NSURLProtectionSpace properties, such as the distinguishedNames array
            https://bugs.webkit.org/show_bug.cgi?id=135229

            Reviewed by Alexey Proskuryakov.

            * Misc/WebDownload.mm: