@@ -4,6 +4,16 @@
         on this branch.
         <rdar://problem/17800530>
 
+        Follow-up comment from Dan Bernstein.
+
+        * Shared/WebPreferencesDefinitions.h: Make sure this only applies to Mavericks and Mountain Lion.
+
+2014-07-25  Dean Jackson  <dino@apple.com>
+
+        Revert back to the Safari behavior from Mavericks and Mountain Lion
+        on this branch.
+        <rdar://problem/17800530>
+
         Reviewed by Ricky Mondello.
 
         * Shared/WebPreferencesDefinitions.h: Set WebGL preference default to off.
